# python-binance-auto-trade

./: .flake8  .gitignore  Dockerfile  README.md  backtest.py  check_balance.py  config.json  config_loader.py  config_manager.py  corrected_state.json  deploy-fargate.sh  deploy-terraform.sh  destroy.sh  env.example  fargate_main.py  fix-secrets-deploy.sh  fix_state.py  lambda_handler.py  notification.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  serverless.yml  state_store.py  test_notifications.py  trade.py
.github/workflows/: deploy-npm.yml  deploy.yml
cdk/: app.py  bitcoin_trading_stack.py  cdk.json  requirements.txt
docs/: DEPLOYMENT_GUIDE.md  FARGATE_DEPLOYMENT.md  IAM_POLICY.md  LAYER_OPTIMIZATION.md  MIGRATION_SUMMARY.md  SETUP_GUIDE.md  TERRAFORM_DEPLOYMENT.md  minimal-iam-policy.json
terraform/: TROUBLESHOOTING.md  import-existing.sh  main.tf  outputs.tf  run-task.sh  secrets.tf  security.tf  set-secrets.sh  terraform.tfvars.example  variables.tf  view-logs.sh
