[tool.poetry]
name = "bitcoin-auto-trader"
version = "0.1.0"
description = "AI-based Bitcoin auto trading system using SMA crossover strategy"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ccxt = "^4.0.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
boto3 = "^1.28.0"
matplotlib = "^3.7.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
backtest = "backtest:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"] 